# bimatrix2xpro

./: pyproject.toml
bimatrix2xpro/: script.py
example/: moto-xpro.gcode  moto.gcode
